# PowerPixelsPipeline

./: .gitignore  3B.wiring.json  README.md  convert_histology_to_alignment_GUI.m  environment.yml  generate_json_files.py  generate_setting_files.py  get_default_sorter_params.py  nidq.wiring.json  notch_filter.json  powerpixel_utils.py  powerpixels.py  prepare_sessions.py  pyproject.toml  run_pipeline.py  run_pipeline_open_ephys.py  run_pipeline_openephys.py  run_pipeline_spikeglx.py  settings.json  visualize_preprocessing.ipynb
config/: notch_filter.json
config/sorter_params/: kilosort4_params.json
scripts/: convert_AP_Histology_probes.m  convert_UniversalProbeFinder_probes.m  convert_histology_to_alignment_GUI.m  example_lfp_processing.py  prepare_sessions.py  run_pipeline.py  run_pipeline_openephys.py  run_pipeline_spikeglx.py  visualize_preprocessing.ipynb
spikesorter_param_files/: kilosort2_5_params.json  kilosort3_params.json  kilosort4_params.json  pykilosort_params.json
src/powerpixels/: __init__.py  generate_config_files.py  pipeline.py  utils.py
